<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>bluecrystal.client</groupId>
	<artifactId>bluecrystal.client.chrome.pkcs</artifactId>
	<version>2.0.1</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	
	<dependencies>
		<!-- https://mvnrepository.com/artifact/al.bluecryst/bluecrystal -->
		<dependency>
		    <groupId>al.bluecryst</groupId>
		    <artifactId>bluecrystal</artifactId>
		    <version>2.3.4</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.21</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.21</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<!-- <finalName>bluc_chrome_p11</finalName>-->
					<!-- <outputDirectory>../dist</outputDirectory> -->
					<excludes>
						<exclude>**/pom.xml</exclude>
						<exclude>**/pom.properties</exclude>
					</excludes>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>bluecrystal.chrome.sign.NativeMessagingHost</mainClass>
						</manifest>
						<manifestEntries>
							<Codebase>*</Codebase>
							<Permissions>all-permissions</Permissions>
							<Application-Library-Allowable-Codebase>*</Application-Library-Allowable-Codebase>
							<Caller-Allowable-Codebase>*</Caller-Allowable-Codebase>
							<Application-Name>BluC Chrome Extension PKCS</Application-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.jolira</groupId>
				<artifactId>onejar-maven-plugin</artifactId>
				<version>1.4.4</version>
				<executions>
					<execution>
						<configuration>
							<!-- Optional, default is false -->
							<attachToBuild>true</attachToBuild>
						</configuration>
						<goals>
							<goal>one-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>